fix: letter spacing & line height

--- a/src/scss/components/memberPage/_banner.scss
+++ b/src/scss/components/memberPage/_banner.scss
@@ -11,8 +11,9 @@
     display: flex;
     align-items: center;
     font-size: 5rem;
+    letter-spacing: 5rem * 0.05;
+    line-height: 5rem * 1.3;
     font-weight: bolder;
-    line-height: 5.5rem;
     background: linear-gradient(
         to right,
         #4fc49b,
